# MusicMaker

./: CMakeLists.txt  LICENSE.md  README.md
outline/: outline.txt
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  main_window.cpp  main_window.hpp
